--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.2.0",
     "expo": "~38.0.1",
     "expo-font": "~8.2.1",
     "expo-status-bar": "^1.0.0",
